# PythonProject

./: .env.example  API_DOCUMENTATION.md  Dockerfile  POSTMAN_COLLECTION.json  README.md  SAMPLE_BOOK_APPOINTMENT.json  SCHEMA_DOCUMENTATION.md  appointment_schema.json  available_slots_schema.json  backup_database.py  docker-compose.yml  doctors_slots.json  main.py  pyproject.toml  sample_data.sql  test_booking_endpoint.py
alembic/: env.py
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: appointments.py  doctors.py  others.py  patients.py
app/core/: config.py
app/db/: session.py
app/exceptions/: custom.py  handlers.py
app/models/: models.py
app/repositories/: appointment.py  audit_log.py  available_slot.py  doctor.py  patient.py
app/schemas/: schemas.py
app/services/: appointment_service.py  doctor_service.py  patient_service.py
backups/: db_backup_20251228_231016.sql
database/: sample_data.sql  schema.sql
scripts/: backup_database.py  repair_pip.py  setup_db.py  setup_venv.ps1  verify_booking_audit.py
tests/integration/: test_api.py
